# music-trainer

./: Cargo.toml  ReadMe.md
src/: application.rs  audio.rs  input_handler.rs  main.rs
